--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,187 @@
 * {
     box-sizing: border-box;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 .header, .footer {
-    flex-shrink: 0;
+    display: flex;
 }
 
 .body {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1300px;
+    margin: auto;
+}
+
+.header, .hero, .footer {
+    background-color: #1F2937;
+    }
+
+    .header {
+        padding-bottom: 75px;
+    }
+.header-container, .hero-container {
+    display: flex;
+    width: 1300px;
+    margin: auto;
+}
+
+.header .logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    align-self: center;
+    /* margin-left: 10%; */
+}
+
+.header .links {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    list-style-type: none;
+    gap: 1.5em;
+    margin-left: auto;
+    /* margin-right: 10%; */
+}
+
+ a {
+    color: #E5E7EB;
+    text-decoration: none;
+}
+
+.hero-container {
+    height: 400px;
+    
+}
+
+.image1 {
+    height: 333px;
+    width: 500px;
+    margin-left: auto;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin: 0;
+    /* flex: 1; */
+    /* border: 1px solid; */
+}
+
+.under-title {
+    font-size: 18px;
+    color: #E5E7EB;
+    /* flex: 1; */
+    /* border: 1px solid; */
+}
+
+.hero-left {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
+    max-width: 600px;
+}
+
+.sign-up {
+    width: 130px;
+    background-color: #3882F6;
+    padding: 0.4em;
+    border: none;
+    border-radius: 15px;
+    font-size: 16px;
+    color: #E5E7EB;
+}
+
+.body-images {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    padding-bottom: 100px;
+}
+
+.figure {
+    width: 250px;
+    height: 175px;
+    border: 5px solid black;
+}
+
+.body-title {
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+figcaption {
+    padding-top: 0.5em;
+    max-width: 250px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    margin: auto;
+    text-align: justify;
+    max-width: 1000px;
+    padding-top: 100px;
+}
+
+.quote-owner {
+    font-size: 30px;
+    font-weight: bold;
+    max-width: 1000px;
+    margin: auto;
+    text-align: end;
+    padding-top: 0.5em;
+    padding-bottom: 100px;
+}
+
+.cta {
+    width: 1300px;
+    margin: auto;
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-color: #3882F6;
+    padding: 24px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cta-header, .cta-text {
+    color:#E5E7EB;
+    margin-left: 50px;
+}
+
+.cta-text {
+    margin-top: -10px;
+}
+
+.cta .sign-up {
+    border: 1px solid #E5E7EB;
+    margin-right: 50px;
+}
+
+.footer {
+    color: #E5E7EB;
+}
+
+.footer-text {
+    margin: auto;
+    padding: 2em;
 }
