--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,8 @@ body {
 }
 
 .image1 {
-    height: 300px;
-    width: 400px;
+    height: 32%;
+    width: 40%;
     margin-left: auto;
     padding-bottom: 2em;
 }
